# scathach-tutor

./: .env.example  .gitignore  BUGS.md  CURRENT_TASK.md  DEVELOPMENT_ROADMAP.md  LICENSE  README.md  SUGGESTIONS.md  package-lock.json  package.json  pyproject.toml  scathach-server.spec
.claude/: settings.local.json
.github/workflows/: release.yml
scathach/: ARCHITECTURE.md  __init__.py  config.py
scathach/api/: __init__.py  models.py  server.py  server_entry.py  session_controller.py
scathach/api/routes/: __init__.py  config.py  review.py  sessions.py  topics.py
scathach/cli/: drill_ui.py  main.py  new_question_review_ui.py  review_ui.py  session_ui.py  stats_ui.py  topic_review_ui.py  topics_ui.py
scathach/core/: drill.py  hydra.py  question.py  scheduler.py  scoring.py  session.py  topic_review.py  topic_support.py
scathach/db/: models.py  repository.py  schema.py
scathach/ingestion/: chunker.py  ingestor.py
scathach/llm/: client.py  parsing.py  prompts.py  providers.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: test_core_models.py  test_db.py  test_generation.py  test_hydra.py  test_ingestion.py  test_llm_client.py  test_prompts.py  test_scheduler.py  test_scoring.py  test_session.py  test_smoke.py
ui/: index.html  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: AnswerEditor.tsx  DualZoneTimer.tsx  HydraNotice.tsx  SessionProgress.tsx
ui/src/pages/: Dashboard.tsx  ReviewScreen.tsx  SessionScreen.tsx  SessionWizard.tsx  Settings.tsx  StatsScreen.tsx  SuperReviewScreen.tsx  TopicDetail.tsx
