[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scathach"
version = "0.1.0"
description = "A spaced-repetition, LLM-powered terminal learning application"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # CLI & TUI
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    # LLM client
    "httpx>=0.27.0",
    "openai>=1.30.0",
    # Document ingestion
    "docling>=2.0.0",
    # Config management
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Utilities
    "python-dotenv>=1.0.0",
    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
scathach = "scathach.cli.main:app"
scathach-server = "scathach.api.server_entry:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["scathach"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["scathach"]
omit = ["tests/*"]
