[package]
name = "scathach"
version = "0.1.0"
description = "scathach — LLM-powered spaced-repetition tutor"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Tauri recommended: panic = abort reduces binary size
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
